--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <h3 id="acknowledgements">Acknowledgements</h3>
 
-<p>Thanks to Brendan Maginnis (<a href="https://github.com/brendanator">@brendanator</a>) for the design which inspired this library.</p>
+<p>Thanks to Dave Gurnell (<a href="https://github.com/davegurnell">@davegurnell</a>) and Brendan Maginnis (<a href="https://github.com/brendanator">@brendanator</a>) for the design which inspired this library.</p>
 
 <h3 id="license">License</h3>
 
